[package]
name = "retriever"
version = "0.1.0"
authors = ["Aydar <lesterrry@rambler.ru>"]
repository = "https://github.com/Fetch-Development/Berg-Transfocator/"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curl = "0.4.33"
clap = "2.33.1"
colorful = "0.2.1"
serde_json = "1.0.57"
serde = {version = "1.0.116", features = ["derive"]}
moon_loader = "0.1.1"
flag_by_code = "0.1.1"
